--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <p>school</p>
+    <p>school </p>
+    <button>
+        add
+    </button>
     
 </body>
 </html>
